# ECHO

./: .eslintrc.cjs  .gitignore  G_E_M_ 邓紫棋 - 后会无期.lrc  G_E_M_ 邓紫棋 - 后会无期.lrc.bak  LICENSE  README.md  README_EN.md  echo-page-astrbot-layering.patch  electron.vite.config.ts  flake.nix  package-lock.json  package.json  tsconfig.json  vitest.config.ts  米津玄師 (よねづ けんし) - 馬と鹿.lrc
.github/workflows/: linux-build.yml
PureAudioPlayer.Console2 (1)/: readme.en.txt  readme.ru.txt
asio-test-native/: asio-test-native.cpp
docs/: CHANGELOG_2026-06-03_2026-06-04.md  ECHO_NEXT_ARCHITECTURE.md  ECHO_NEXT_AUDIO_CORE.md  ECHO_NEXT_DSP_BEGINNER_GUIDE.md  ECHO_NEXT_DSP_SIMPLE_GUIDE.md  ECHO_NEXT_EQ.md  ECHO_NEXT_FEATURE_DIRECTION_HQPLAYER_DIGITAL_TRANSPORT.md  ECHO_NEXT_LIBRARY_CORE.md  ECHO_NEXT_LINUX_BUILD.md  ECHO_NEXT_PLUGINS.md  ECHO_NEXT_ROADMAP.md  ECHO_NEXT_RULES.md  ECHO_NEXT_UI_GUIDE.md  ECHO_NEXT_ULTIMATE_ANALYSIS_2026-05-20.md  FUNCTIONAL_EVALUATION.md  THEME_AI_GUIDE.md  USER_GUIDE.md  audio-fix-initialize-timeout.md  audio-stability-overhaul.md  audio-stability-polish-prompt.md
native/library-scanner/: CMakeLists.txt
native/library-scanner/src/: main.cpp
scripts/: benchmark-file-scanner.mjs  benchmark-native-metadata.mjs  build-airplay-raop.mjs  build-audio-host.mjs  build-linux.mjs  build-native-scanner.mjs  check-encoding.mjs  ensure-airplay-raop.mjs  install-electron.cjs  smoke-audio-host.mjs  smoke-native-scanner.mjs  smoke-smtc-host.mjs  sync-audio-host.mjs  test-audio-engine.mjs  verify-airplay-package.mjs  verify-ffmpeg-toolchain.mjs  vitest-global-setup.mjs
(+461 files in other folders)
